syntax = "proto3";

package pb;

option go_package = "github.com/greeflas/itea_golang/proto/pb";

service GreetingService {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {};
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}
